# NVI_Solutions_test_task

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: .env  main.py  prestart.sh
app/alembic/: env.py
app/alembic/versions/: b7219432ce66_initial.py  dde8e782246b_test_data.py
app/api/: __init__.py
app/api/api_v1/: __init__.py  videos.py
app/api/middlewares/: process_time.py  register_middleware.py
app/core/: config.py
app/core/database/: base.py  db_helper.py
app/core/redis/: base.py  redis_helper.py
app/models/: __init__.py  base.py  video.py
app/repositories/: __init__.py  base_repo.py  videos_repo.py
app/schemas/: __init__.py  video.py
app/utils/: __init__.py  redis_utils.py
